# agentic-feedback-workflow

./: .gitignore  LICENSE  README.md
agent/: build-script.sh  pyproject.toml  requirements.txt
agent/app/: build.py  main.py  models.py  mongodb_client.py  run.py
agent/app/portia_service/: portia_client.py  workflows.py
agent/app/portia_service/custom_tools/: semantic_search.py
agent/app/portia_service/mcp_servers/: resend.js
agent/tests/: send_mail.py
frontend-ui/: index.html  package-lock.json  package.json
frontend-ui/src/: App.tsx  types.ts
frontend-ui/src/components/: FeedbackForm.tsx  Feedbacks.tsx  JudgeReview.tsx
frontend-ui/src/data/: mockData.ts
frontend-ui/src/services/: api.ts
frontend/src/: App.tsx
