[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Partheev Budarapu",email = "partheev8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "portia-sdk-python (>=0.7.1,<0.8.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "openai (==1.98)",
    "pymongo (>=4.14.1,<5.0.0)",
]

[tool.poetry]
packages = [{include = "agent", from = "app"}]

[tool.poetry.scripts]
start = "uvicorn agent.app.main:app --host 0.0.0.0 --port 8000"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
